--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;1,900&family=Rajdhani:wght@400;700&family=Sedgwick+Ave+Display&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <title>OMDb API</title>
 </head>
 
