--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="The Open Movie Database API is a RESTful web service to obtain movie information, all content and images on the site are contributed and maintained by our users." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
